--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devapt-app-devtools",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Developpers Application Toolkit - Developper Tools application",
   "author": "Luc BORIES (https://github.com/lucbories)",
   "license": "Apache-2.0",
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "start_node.cmd -n nodeA",
     "debug_master": "start_node_debug.cmd -n nodeA",
-    "debug_nodeB":  "start_node_debug.cmd -n nodeB"
+    "debug_nodeB": "start_node_debug.cmd -n nodeB"
   },
   "keywords": [
     "server",
@@ -38,6 +38,5 @@
     "devapt": "^1.0.0",
     "devapt-devtools": "^1.0.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
