fix:update nodes.json and services.json

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start":"node node_modules/devapt/dist/server/start_node.js -n NodeA -t dist/resources/world -b node_modules/devapt-devtools/dist -s NodeA:NodeALocal8080",
     "start_cmd": "start_node.cmd -n NodeA",
     "debug_master": "start_node_debug.cmd -n NodeA",
-    "debug_nodeB": "start_node_debug.cmd -n NodeB"
+    "debug_nodeB": "start_node_debug.cmd -n NodeB",
+    "commit":"unix2dos package.json && git status && pause && git commit -am "
   },
   "keywords": [
     "server",
