--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "devapt-app-devtools",
   "version": "1.0.4",
   "description": "Developpers Application Toolkit - Developper Tools application",
-  "author": "Luc BORIES (https://github.com/lucbories)",
+  "author": {
+    "name":"Luc BORIES",
+    "email":"luc.bories@gmail.com",
+    "url": "https://github.com/lucbories"
+  },
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -17,6 +21,7 @@
   "directories": { "dist":"./dist" },
   "scripts": {
     "start": "node node_modules/devapt/dist/server/start_node.js -n NodeA -t dist/resources/world -b node_modules/devapt-devtools/dist -s NodeA:NodeALocal8080",
+    "start_512MB": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 node_modules/devapt/dist/server/start_node.js -n NodeA -t dist/resources/world -b node_modules/devapt-devtools/dist -s NodeA:NodeALocal8080",
     "start_cmd": "start_node.cmd -n NodeA",
     "debug_master": "start_node_debug.cmd -n NodeA",
     "debug_nodeB": "start_node_debug.cmd -n NodeB",
